2005-01-18 17:06  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSWindow.m
	(-initWithContentRect:styleMask:backing:defer:screen:): Assert that
	the shared application instance has been created instead of just
	calling NSLog. Make the message clearer.

2005-01-18 16:53  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSCell.m (-setUpFieldEditorAttributes:): Clear the
	text object's string.
	* Source/NSControl.m (-setDoubleValue:, -setFloatValue:)
	(-setIntValue:, -setStringValue:, -setObjectValue:): If the receiver
	was being edited when the method was called, make it the first
	responder after changing the value.
	(-abortEditing): Don't clear the text object's string.
	* Source/NSMatrix.m (-abortEditing): Don't clear the text object's
	string.
	* Source/NSTableView.m (-abortEditing): Ditto.
	* Source/NSTextField.m (-abortEditing): Ditto.

2005-01-18 16:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSBitmapImageRep.m
	(-TIFFRepresentationUsingCompression:factor:): Don't use pointer
	comparisons to compare strings. Handle both device and calibrated
	colorspaces. Warn if the colorspace isn't recognized.

2005-01-18 15:50  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSApplication.m (-runModalSession:): Don't order the window
	to the front or make it the key/main window.

2005-01-18 15:46  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSApplication.m (-finishLaunching): Don't attempt to open
	an untitled file if we were autolaunched.

2005-01-18 14:16  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSAffineTransform.m (pi): Correct the rounding.

2005-01-18  Matt Rice <ratmice@yahoo.com>

        * Source/NSTextView.m (setSelectedRange:): Do not make the selected
	text visible.
        (-didChangeText,-checkSpelling:): Make the selected text visible.
        * Source/NSTextView_actions.m (_moveTo:select:): Ditto.
        * Source/NSCell.m (-setUpFieldEditorAttributes:): Ditto.